# 01-coding-template

./: .dockerignore  .env.example  .gitignore  Dockerfile.hud  README.md  USAGE.md  build_support.py  cli.py  env.py  hud.lock.yaml  pyproject.toml  scripts.py  task_bootstrap.py
.hud/: deploy.json
grading/: __init__.py
src/ast_pilot/: alignment_fixer.py  alignment_review.py  cli.py  evidence.py  fixer.py  grader_expectations.py  grader_gen.py  languages.py  llm_client.py  node_bundle.py  node_grader_gen.py  node_repo_support.py  node_scanner.py  node_spec_renderer.py  node_validator.py  repo_support.py  runtime_assets.py  scan_node.mjs  scanner.py  shared_utils.py  spec_renderer.py  tui.py  validator.py
tasks/: __init__.py
tasks/_helpers/: __init__.py
tasks/ansi_strip/: prompt.md  task.py
tasks/anthropic_adapter/: prompt.md  task.py
tasks/approval/: prompt.md  requirements.hidden.txt  task.py
tasks/bug_bounty_fixer/: prompt.md  task.py
tasks/citty/: node_bundle_manifest.json  prompt.md  task.py
tasks/collaborative_wiki_engine/: prompt.md  task.py
tasks/context_compressor/: prompt.md  task.py
tasks/context_references/: prompt.md  task.py
tasks/cyber_incident_simulator/: prompt.md  task.py
tasks/cyber_threat_hunter/: generate_golden.py  generate_technical_prompt.py  prompt.md  task.py
tasks/defu/: node_bundle_manifest.json  prompt.md  task.py
tasks/example_task/: prompt.md  task.py
tasks/file_operations/: prompt.md  task.py
tasks/fuzzy_match/: __init__.py  prompt.md  task.py
tasks/hermes_file_operations_large_e2e/: prompt.md  task.py
tasks/hermes_retry/: prompt.md  task.py
tasks/hw_sw_codesign/: prompt.md  task.py
tasks/lockfree_concurrent_hashmap/: prompt.md  task.py
tasks/medical_chatbot/: __init__.py  generate_prompt.py  generate_technical_prompt.py  prompt.md  requirements.hidden.txt  task.py
tasks/multi_tenant_system/: prompt.md  task.py
tasks/patch_parser/: prompt.md  requirements.hidden.txt  task.py
tests/: test_alignment_fixer.py  test_alignment_review.py  test_build_support.py  test_cli.py  test_env.py  test_fixer.py  test_grader_expectations.py  test_grader_gen.py  test_llm_client.py  test_node_alignment_fixer.py  test_node_alignment_review.py  test_node_bundle.py  test_node_grader_gen.py  test_node_repo_support.py  test_node_scanner.py  test_node_spec_renderer.py  test_node_validator.py  test_runtime_assets.py  test_scanner.py  test_scripts.py  test_spec_renderer.py  test_task_helpers.py  test_tui.py  test_validator.py
(+118 files in other folders)
