[project]
name = "coding-env"
version = "0.1.0"
description = "Coding environment and task generator for 0-to-1 development tasks on HUD"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    # Pinned to a tested range. Floor is the version we built against; ceiling caps
    # at the next minor so transitive bumps (fastmcp, mcp) can't silently change the
    # Environment / scenario API. Bump only when integration_test passes against the
    # new version on at least one Python and one TypeScript task. Then re-run
    # `uv lock` and commit the updated uv.lock alongside.
    "hud-python[agents]>=0.5.35,<0.6",
    "rubric>=1.3,<2",
    "rich>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff==0.11.2",
    "pre-commit>=3.5.0",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
ast-pilot = "ast_pilot.cli:main"
hud_eval = "cli:main"

[tool.uv]
package = true

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.hud]
image = "01-coding-template:dev"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "C4", "UP"]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/ast_pilot", "."]
